Fix for missing title.

--- a/dkub-minutes.dtx
+++ b/dkub-minutes.dtx
@@ -579,8 +579,10 @@ and the derived files           dkub-minutes.ins,
 %    \begin{macrocode}
       \begin{center}
         \includegraphics[scale=\min@logoscale]{\min@logo}
+        \par
+        \vspace{\min@logopadding}
+        \bfseries\sffamily{ \min@shortdate{} \min@title}
       \end{center}
-      \vspace{\min@logopadding}
       \begin{tabularx}{\textwidth}{l X}
         \toprule
         & \\
